--- a/src/styles.css
+++ b/src/styles.css
@@ -20,6 +20,11 @@
   justify-content: center;
   flex-basis: 15%;
 }
+
+.view-title {
+  padding-left: 5%;
+}
+
 .recipes-wrapper {
   display: flex;
   flex-direction: row;
@@ -31,4 +36,29 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+}
+
+.ingredient-checkbox {
+  margin-right: 15px;
+}
+
+.ingredient-label {
+  display: flex;
+  align-items: center;
+  margin-left: 2%;
+}
+
+.ingredient-quantity {
+  margin-right: 2%;
+}
+.ingredient-wrap{
+  margin: 1%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border-style: solid;
+}
+
+.hidden {
+  display: none;
 }
