--- a/src/styles.css
+++ b/src/styles.css
@@ -59,6 +59,15 @@ body {
   border-style: solid;
 }
 
+.pantry-view {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.ingredient-list {
+  width: 50%;
+}
 .hidden {
   display: none;
 }
