--- a/src/styles.css
+++ b/src/styles.css
@@ -68,6 +68,45 @@ body {
 .ingredient-list {
   width: 50%;
 }
+
+.modal-recipe-view {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+}
+
+.modal-img {
+  height: 100%;
+  width: 100%;
+  border-radius: 5%;
+}
+
+.modal-content {
+  display: flex;
+  flex-direction: column;
+  border-style: solid;
+  padding: 5%;
+  border-radius: 5%;
+}
+
+.modal-recipe-info {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.modal-tags {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.modal-instructions {
+  margin-left: 25%;
+}
+
 .hidden {
   display: none;
 }
