--- a/src/styles.css
+++ b/src/styles.css
@@ -70,10 +70,13 @@ body {
 }
 
 .modal-recipe-view {
-  width: 50%;
+  padding-top: 5%;
   display: flex;
-  flex-direction: column;
-  align-self: center;
+  justify-content: center;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.4);
 }
 
 .modal-img {
@@ -83,11 +86,15 @@ body {
 }
 
 .modal-content {
+  overflow: auto;
   display: flex;
   flex-direction: column;
   border-style: solid;
   padding: 5%;
   border-radius: 5%;
+  width: 60%;
+  background-color: white;
+  height: auto;
 }
 
 .modal-recipe-info {
