--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,11 @@
   justify-content: center;
 }
 
+.clear-search-results {
+  margin-left: 5px;
+  height: 25px;
+  width: 25px;
+}
 .recipe-card {
   margin: 2%;
   display: flex;
