--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,7 @@
 }
 
 .clear-search-results {
-  margin-left: 5px;
+  margin: 5px;
   height: 25px;
   width: 25px;
 }
@@ -25,7 +25,22 @@
   justify-content: center;
   flex-basis: 20%;
   height: 100%;
+  border: 1px solid black;
+  border-radius: 5px;
 }
+
+.card-content {
+  margin: 5%;
+}
+
+.tag-buttons {
+  height: 7vh;
+}
+
+.card-title {
+  height: 5vh;
+}
+
 
 .recipe-card-image {
   width: 100%;
@@ -50,10 +65,12 @@
 
 .tag-button {
   margin: 1%;
+  width: 100px;
 }
 
 .all-tag-button {
   margin: 1%;
+  width: 100px;
 }
 
 .tag-title {
@@ -67,6 +84,19 @@
   flex-direction: row;
   justify-content: flex-start;
   flex-wrap: wrap;
+}
+
+.search-input {
+  margin: 5px;
+}
+
+.search-button {
+  margin: 5px;
+}
+
+.recipe-ctas {
+  display: flex;
+  justify-content: space-between;
 }
 
 body {
@@ -108,31 +138,43 @@ body {
 }
 
 .modal-recipe-view {
-  padding-top: 5%;
   display: flex;
   justify-content: center;
   position: fixed;
   width: 100%;
   height: 100%;
   background-color: rgba(0,0,0,0.4);
+  bottom: 0;
+  top: 0;
+  padding-top: 5vh;
+
 }
 
 .modal-img {
-  height: 100%;
   width: 100%;
   border-radius: 5%;
+  align-self: center;
+}
+
+.recipe-name {
+  align-self: center;
 }
 
 .modal-content {
-  overflow: auto;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
-  border-style: solid;
   padding: 5%;
   border-radius: 5%;
   width: 60%;
   background-color: white;
   height: auto;
+  max-height: 80%;
+  box-shadow: 3px 6px 5px 2px #000000de
+}
+
+.modal-scroll {
+  overflow: auto;
 }
 
 .modal-recipe-info {
@@ -143,9 +185,7 @@ body {
 
 .modal-tags {
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  flex-wrap: wrap;
+  flex-direction: column;
 }
 
 .modal-instructions {
