--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,21 @@
+html {
+  font-family: 'Roboto', sans-serif;
+}
+
 .header-nav{
   display: flex;
   flex-direction: column;
+  background-color: #e5383b;
+  width: 125%;
 }
 
 .nav-buttons {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+
 }
+
 .search-bar {
   display: flex;
   justify-content: center;
@@ -18,6 +26,13 @@
   height: 25px;
   width: 25px;
 }
+
+.clear-modal {
+  align-self: flex-end;
+  height: 5%;
+  width: 5%;
+}
+
 .recipe-card {
   margin: 2%;
   display: flex;
@@ -151,7 +166,7 @@ body {
 }
 
 .modal-img {
-  width: 100%;
+  width: 50%;
   border-radius: 5%;
   align-self: center;
 }
@@ -164,17 +179,19 @@ body {
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  padding: 5%;
-  border-radius: 5%;
-  width: 60%;
+  padding: 2%;
+  border-radius: 1%;
+  width: 45%;
   background-color: white;
-  height: auto;
+  height: 75%;
   max-height: 80%;
   box-shadow: 3px 6px 5px 2px #000000de
 }
 
 .modal-scroll {
   overflow: auto;
+  display: flex;
+  flex-direction: column;
 }
 
 .modal-recipe-info {
@@ -183,13 +200,29 @@ body {
   justify-content: space-between;
 }
 
+.modal-tags-header {
+  margin-top: 1%;
+  margin-bottom: 1%;
+}
+
 .modal-tags {
   display: flex;
   flex-direction: column;
 }
 
+.modal-ingredients {
+  width: 40%;
+}
+
 .modal-instructions {
-  margin-left: 25%;
+  width: 60%;
+}
+
+.modal-add-buttons {
+  margin: 3%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .hidden {
