--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@ html {
   display: flex;
   flex-direction: column;
   background-color: #e5383b;
-  width: 125%;
+  width: 100%;
 }
 
 .nav-buttons {
@@ -14,6 +14,19 @@ html {
   flex-direction: row;
   justify-content: space-around;
 
+}
+
+.favorite-button {
+  top: 3%;
+  right: 3%;
+  position: absolute;
+  height: 60px;
+  width: 60px;
+  filter: invert(67%) sepia(59%) saturate(0%) hue-rotate(45deg) brightness(99%) contrast(97%);
+}
+
+.favorite-button-clicked {
+  filter: invert(12%) sepia(100%) saturate(7398%) hue-rotate(341deg) brightness(94%) contrast(102%);
 }
 
 .search-bar {
@@ -34,6 +47,7 @@ html {
 }
 
 .recipe-card {
+  position: relative;
   margin: 2%;
   display: flex;
   flex-direction: column;
@@ -58,6 +72,7 @@ html {
 
 
 .recipe-card-image {
+  opacity: 85%;
   width: 100%;
   height: 100%;
 }
