--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,8 @@ html {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-
+  color: #FFFFFF;
+  font-weight: 100;
 }
 
 .recipe-title {
