--- a/src/styles.css
+++ b/src/styles.css
@@ -161,7 +161,7 @@ body {
   border-style: solid;
 }
 
-.pantry-view {
+.pantry-view, .shopping-list-view {
   display: flex;
   flex-direction: column;
   align-items: center;
