--- a/src/styles.css
+++ b/src/styles.css
@@ -174,6 +174,8 @@ button:focus {
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
 .tag-area {
