--- a/src/styles.css
+++ b/src/styles.css
@@ -377,6 +377,60 @@ body {
   justify-content: space-between;
 }
 
+@media only screen and (max-width: 600px){
+
+.nav-buttons {
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.home-view {
+  flex-basis: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+ .recipes-to-cook, .view-shopping-list, .pantry-button, .favorites-view {
+   font-size: 1.25em;
+   flex-basis: 50%;
+   display: flex;
+   justify-content: space-around;
+ }
+
+ .search-bar {
+   display: flex;
+   justify-content: center;
+ }
+
+ .search-input {
+   width: 75%;
+ }
+
+ .recipes-wrapper {
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-around;
+ }
+
+ .recipe-card {
+   display: flex;
+   flex-basis: 40%;
+ }
+
+ .view-recipe-button {
+   width: 95%
+ }
+
+ .modal-content {
+   width: 90%;
+ }
+
+ .modal-recipe-info {
+   margin-top: 10%;
+ }
+
+}
+
 .hidden {
   display: none;
 }
