--- a/src/styles.css
+++ b/src/styles.css
@@ -388,13 +388,15 @@ body {
   flex-basis: 100%;
   display: flex;
   justify-content: center;
+  margin-top: 2%;
+
 }
 
  .recipes-to-cook, .view-shopping-list, .pantry-button, .favorites-view {
    font-size: 1.25em;
-   flex-basis: 50%;
+   flex-basis: 25%;
    display: flex;
-   justify-content: space-around;
+   justify-content: center;
  }
 
  .search-bar {
@@ -428,6 +430,62 @@ body {
  .modal-recipe-info {
    margin-top: 10%;
  }
+
+.tag-section {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 2%;
+}
+
+.tag-button {
+  flex-basis: 25%;
+  width: 25%;
+}
+
+.tag-title {
+  margin: 0;
+  transform: scale(.75);
+}
+
+.all-tag-button {
+  flex-basis: 25%;
+}
+
+.recipe-view {
+  transform: scale(.85);
+}
+
+.view-title {
+  padding-left: 0;
+}
+
+.recipe-title {
+  margin-left: 1%;
+  margin-right: 0%;
+}
+
+.recipe-name {
+  width: 100%;
+}
+
+.modal-recipe-info {
+  margin-top: 2%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.modal-ingredients-list, .modal-tags-list, .modal-instructions-list{
+  width: 75%;
+}
+
+.modal-ingredients {
+  width: 75%;
+}
+
+.modal-instructions {
+  width: 75%;
+}
 
 }
 
